Fixed that the progress bars of restore and backups are visible in the backup/restore route when they are running. Its a bit hacky but works. Review appreciated.

--- a/src/backup-restore/ui/styles.css
+++ b/src/backup-restore/ui/styles.css
@@ -72,10 +72,11 @@
 
 .WarningIcon {
     composes: WarningIconWhite from '../../common-ui/icons.css';
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     display: inline-flex;
     margin-right: 15px;
+    background-size: contain;
 }
 
 /* Upgrade Button */
